images positioned, phone background added

--- a/index.html
+++ b/index.html
@@ -72,44 +72,9 @@
 							<h3 class="grid__item-title">Mood</h3>
 						</a>
 					</li>
-					<li class="grid__item">
-						<a class="grid__link" href="#">
-							<img class="grid__img" src="img/photos/7.jpg" alt="Some image" />
-							<h3 class="grid__item-title">Natural saturation effects</h3>
-						</a>
-					</li>
-					<li class="grid__item">
-						<a class="grid__link" href="#">
-							<img class="grid__img" src="img/photos/8.jpg" alt="Some image" />
-							<h3 class="grid__item-title">That special blur</h3>
-						</a>
-					</li>
-					<li class="grid__item">
-						<a class="grid__link" href="#">
-							<img class="grid__img" src="img/photos/9.jpg" alt="Some image" />
-							<h3 class="grid__item-title">Auto-color and light</h3>
-						</a>
-					</li>
-					<li class="grid__item">
-						<a class="grid__link" href="#">
-							<img class="grid__img" src="img/photos/1.jpg" alt="Some image" />
-							<h3 class="grid__item-title">Natural saturation effects</h3>
-						</a>
-					</li>
-					<li class="grid__item">
-						<a class="grid__link" href="#">
-							<img class="grid__img" src="img/photos/2.jpg" alt="Some image" />
-							<h3 class="grid__item-title">Auto-color and light</h3>
-						</a>
-					</li>
-					<li class="grid__item">
-						<a class="grid__link" href="#">
-							<img class="grid__img" src="img/photos/3.jpg" alt="Some image" />
-							<h3 class="grid__item-title">That special blur</h3>
-						</a>
-					</li>
+
 				</ul>
-				<button class="button button--load" aria-label="Load more images">
+<!--				<button class="button button--load" aria-label="Load more images">
 					<svg class="polaroid" width="100%" height="100%" viewBox="0 0 220 243" preserveAspectRatio="xMidYMid meet">
 						<rect class="polaroid__base" x="0" y="0" width="220" height="243" rx="5"></rect>
 						<rect class="polaroid__inner" x="16" y="20" width="189" height="149"></rect>
@@ -120,7 +85,7 @@
 						</g>
 					</svg>
 					<span class="button__text">Load more</span>
-				</button>
+				</button>-->
 			</section>
 			<div class="device">
 				<div class="device__screen"></div>
