modified some parameters to improve visibility

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 	</head>
 	<body>
 		<div class="view">
-			<header class="header">
+<!--			<header class="header">
 				<nav class="demos">
 					<a class="demos__item" href="#">Navbar #1</a>
 					<a class="demos__item demos__item--current" href="#">Navbar #2</a>
 				</nav>
 			</header>
-			<section class="page page--mover">
+-->			<section class="page page--mover">
 				<div class="la-square-loader"><div></div></div>
 			</section>
 			<div class="title-wrap">
@@ -38,20 +38,14 @@
 				<ul class="grid">
 					<li class="grid__item">
 						<a class="grid__link" href="#">
-							<img class="grid__img" src="img/photos/1.jpg" alt="Exterior" />
-							<h3 class="grid__item-title">Exterior</h3>
-						</a>
-					</li>
-					<li class="grid__item">
-						<a class="grid__link" href="#">
 							<img class="grid__img" src="img/photos/2.jpg" alt="Interior" />
 							<h3 class="grid__item-title">Interior</h3>
 						</a>
 					</li>
 					<li class="grid__item">
 						<a class="grid__link" href="#">
-							<img class="grid__img" src="img/photos/3.jpg" alt="artist" />
-							<h3 class="grid__item-title">The artist</h3>
+							<img class="grid__img" src="img/photos/1.jpg" alt="Exterior" />
+							<h3 class="grid__item-title">Exterior</h3>
 						</a>
 					</li>
 					<li class="grid__item">
@@ -70,6 +64,12 @@
 						<a class="grid__link" href="#">
 							<img class="grid__img" src="img/photos/6.jpg" alt="Mood" />
 							<h3 class="grid__item-title">Mood</h3>
+						</a>
+					</li>
+					<li class="grid__item">
+						<a class="grid__link" href="#">
+							<img class="grid__img" src="img/photos/3.jpg" alt="artist" />
+							<h3 class="grid__item-title">The artist</h3>
 						</a>
 					</li>
 
